Minor fixes: dark mode, view transitions, layout

--- a/src/components/game/TrainingBoard.module.sass
+++ b/src/components/game/TrainingBoard.module.sass
@@ -29,7 +29,6 @@
       cursor: pointer
       @media screen and (min-width: variables.$medium)
         max-width: 2.5rem
-        // margin-bottom: 0
         margin-left: .5rem
 
 .qualiScore
@@ -57,7 +56,6 @@
   transform: translateY(-4px)
 
 svg, .result
-  transition: color .25s linear
   &:hover
     color: var(--color-accent)
 
