--- a/src/components/game/controls/DnDDiceBoard.module.sass
+++ b/src/components/game/controls/DnDDiceBoard.module.sass
@@ -54,7 +54,7 @@
   svg
     width: 100%
 
-.rollButton // less chars more mem??
+.rollButton // less chars more mem???
   border: none
   background-color: var(--color-primary)
   border-radius: .25rem
@@ -63,8 +63,7 @@
   width: 100%
   min-height: variables.$rollButtonHeight 
   transition-property: background-color, color, border
-  transition-duration: .5s
-  transition-timing-function: linear
+  transition-duration: var(--duration-default)
   cursor: pointer
   @media screen and (min-width: variables.$medium)
     margin-top: 0
